@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2004/04/28 06:00:11 snj Exp $
+$NetBSD: distinfo,v 1.3 2004/10/30 01:12:38 minskim Exp $
 
-SHA1 (swiggle-0.3.2.tar.gz) = ef798b9d35dac021a6bc9a12095109a96e35e2d1
-Size (swiggle-0.3.2.tar.gz) = 13995 bytes
+SHA1 (swiggle-0.3.3.tar.gz) = 99bcc1d6eb9527795f61d7eb76b700b7ccffb4c4
+Size (swiggle-0.3.3.tar.gz) = 12999 bytes
