@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7609 2004/10/30 00:50:46 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7610 2004/10/30 01:12:38 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4973,3 +4973,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added putty-0.56 [xtraeme 2004-10-29]
 	Updated jpeg to 6bnb3 [xtraeme 2004-10-30]
 	Updated feh to 1.2.7 [xtraeme 2004-10-30]
+	Updated swiggle to 0.3.3 [minskim 2004-10-30]
